Update the code

--- a/B1DITest_WindowsService_CSharp.csproj
+++ b/B1DITest_WindowsService_CSharp.csproj
@@ -89,6 +89,7 @@
     <None Include="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="README.md" />
     <None Include="ValidateConfig.ps1" />
   </ItemGroup>
   <ItemGroup>
